--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "react-spring": "^9.4.2",
     "react-svg": "^14.1.9",
     "react-tsparticles": "^1.40.0",
+    "semantic-ui-css": "^2.4.1",
+    "semantic-ui-react": "^2.1.1",
     "walletlink": "^2.4.5",
     "web3modal": "^1.9.5"
   },
